# video_analyzer

./: .gitignore  main.py  pyproject.toml
detectors/: .env.example  FaceAnalyzer.py  GazeAnalyzer.py  VoiceAnalyzer.py  main.py
