[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "face-recognition>=1.3.0",
    "fastapi>=0.116.1",
    "librosa>=0.11.0",
    "opencv-python>=4.12.0.88",
    "psutil>=7.0.0",
    "pyannote-audio>=3.4.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
